docs: Remove clutter, outdated info and update swagger and graphql playground
